--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19
-yarn_mappings=1.19+build.1
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.3
 loader_version=0.14.6
 #Fabric API
-fabric_version=0.55.1+1.19
+fabric_version=0.51.1+1.18.2
 # Mod Properties
-mod_version=1.19-1.3
+mod_version=1.18.2-1.4
 maven_group=fr.minemobs
 archives_base_name=hideplayers
 
+midnightlib_version = 0.4.4
+modmenu_version = 3.2.3
