--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ loader_version=0.14.6
 #Fabric API
 fabric_version=0.51.1+1.18.2
 # Mod Properties
-mod_version=1.18.2-1.6.1
-maven_group=fr.minemobs
-archives_base_name=hideplayers
+mod_version=1.0.0
+maven_group=name.uwu.feytox
+archives_base_name=toomanyplayers
 
 midnightlib_version = 0.4.4
 modmenu_version = 3.2.3
