added presets and online whitelist

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 	modImplementation "maven.modrinth:midnightlib:${project.midnightlib_version}"
 	include "maven.modrinth:midnightlib:${project.midnightlib_version}"
 	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+
+	implementation 'com.google.code.gson:gson:2.9.0'
 }
 
 processResources {
