--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.3
+minecraft_version=1.19
+yarn_mappings=1.19+build.1
 loader_version=0.14.6
 #Fabric API
-fabric_version=0.51.1+1.18.2
+fabric_version=0.55.1+1.19
 # Mod Properties
-mod_version=1.1.4
+mod_version=1.19-1.1.4
 maven_group=name.uwu.feytox
 archives_base_name=toomanyplayers
 
-midnightlib_version = 0.4.4
-modmenu_version = 3.2.3
+midnightlib_version = 0.5.2
+modmenu_version = 4.0.0
