--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modImplementation include("io.github.cottonmc:LibGui:6.0.0+1.19")
+	modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}")
 
 	modImplementation "maven.modrinth:midnightlib:${project.midnightlib_version}"
 	include "maven.modrinth:midnightlib:${project.midnightlib_version}"
