--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,19 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.1
-yarn_mappings=1.19.1+build.1
-loader_version=0.14.8
+
+minecraft_version=1.19.3
+yarn_mappings=1.19.3+build.5
+loader_version=0.14.12
+
 #Fabric API
-fabric_version=0.58.5+1.19.1
+fabric_version=0.71.0+1.19.3
+
 # Mod Properties
-mod_version=1.19-1.1.4
+mod_version=1.19.3-1.1.4
 maven_group=name.uwu.feytox
 archives_base_name=toomanyplayers
 
-midnightlib_version = 0.5.2
-modmenu_version = 4.0.5
+
+midnightlib_version = 1.1.0-fabric
+libgui_version = 6.5.0+1.19.3
+modmenu_version = 5.0.2
