name.uwu.feytox -> ru.feytox

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,10 +10,10 @@ fabric_version=0.71.0+1.19.3
 
 # Mod Properties
 mod_version=1.19.3-1.1.4
-maven_group=name.uwu.feytox
+maven_group=ru.feytox
 archives_base_name=toomanyplayers
 
-
+# libs
 midnightlib_version = 1.1.0-fabric
 libgui_version = 6.5.0+1.19.3
 modmenu_version = 5.0.2
