--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,19 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.5
-loader_version=0.14.12
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.1
+loader_version=0.14.18
 
 #Fabric API
-fabric_version=0.71.0+1.19.3
+fabric_version=0.76.0+1.19.4
 
 # Mod Properties
-mod_version=1.19.3-1.1.4
+mod_version=1.19.4-1.1.4
 maven_group=ru.feytox
 archives_base_name=toomanyplayers
 
 # libs
-midnightlib_version = 1.1.0-fabric
-libgui_version = 6.5.0+1.19.3
-modmenu_version = 5.0.2
+midnightlib_version = 1.2.1-fabric
+libgui_version = 7.0.0-beta.2+1.19.4
+modmenu_version = 6.1.0-rc.4
