--- a/build.gradle
+++ b/build.gradle
@@ -15,16 +15,9 @@ repositories {
 		name = "CottonMC"
 		url = "https://server.bbkr.space/artifactory/libs-release"
 	}
-	maven {
-		name = "Modrinth"
-		url = "https://api.modrinth.com/maven"
-		content {
-			includeGroup "maven.modrinth"
-		}
-	}
-	maven {
-		url = "https://maven.terraformersmc.com/releases/"
-	}
+	maven { url = "https://maven.terraformersmc.com/releases/" }
+	maven { url = 'https://jitpack.io' }
+	maven { url = "https://api.modrinth.com/maven" }
 }
 
 dependencies {
@@ -40,6 +33,7 @@ dependencies {
 	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
 
 	implementation 'com.google.code.gson:gson:2.9.0'
+	modImplementation "com.github.feytox:OptiDevium:${project.minecraft_version}-SNAPSHOT"
 }
 
 processResources {
