--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,20 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.6
+minecraft_version=1.20.6
+yarn_mappings=1.20.6+build.1
+loader_version=0.15.11
 
 #Fabric API
-fabric_version=0.96.1+1.20.4
+fabric_version=0.98.0+1.20.6
 
 # Mod Properties
-mod_version=1.20.4-1.1.5
+mod_version=1.20.6-1.1.5
 maven_group=ru.feytox
 archives_base_name=toomanyplayers
 
 # libs
-midnightlib_version = 1.5.3-fabric
-libgui_version = 9.2.2+1.20.2
-modmenu_version = 9.0.0
+midnightlib_version = 1.5.5-fabric
+modmenu_version = 10.0.0-beta.1
+libgui_version = 10.0.0+1.20.6
