--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,10 +40,11 @@ jobs:
           curseforge-id: 663273
           curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
 
-          name: "[1.20.6] Too Many Players 1.1.5"
+          name: "[1.21 - 1.21.1] Too Many Players 1.1.5"
           changelog-file: CHANGELOG.*
           game-versions: |
-            1.20.6
+            1.21
+            1.21.1
 
           dependencies: |
             modmenu(optional)
