--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,20 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
-minecraft_version=1.20.6
-yarn_mappings=1.20.6+build.1
-loader_version=0.15.11
+minecraft_version=1.21
+yarn_mappings=1.21+build.9
+loader_version=0.16.2
 
 #Fabric API
-fabric_version=0.98.0+1.20.6
+fabric_version=0.102.0+1.21
 
 # Mod Properties
-mod_version=1.20.6-1.1.5
+mod_version=1.21-1.1.5
 maven_group=ru.feytox
 archives_base_name=toomanyplayers
 
 # libs
-midnightlib_version = 1.5.5-fabric
-modmenu_version = 10.0.0-beta.1
-libgui_version = 10.0.0+1.20.6
+midnightlib_version = 1.5.8-fabric
+modmenu_version = 11.0.1
+libgui_version = 11.1.0+1.21
